Text threeJs in progress

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,10 +1,10 @@
-<app-header [title]="'CHATBOT'" [title2]="''" [subTitle]="'Ask anything!'"
-    [subTitle2]="'Powered by ChatGPT'"></app-header>
+<!-- <app-header [title]="'CHATBOT'" [title2]="''" [subTitle]="'Ask anything!'"
+    [subTitle2]="'Powered by ChatGPT'"></app-header> -->
 <div class="my-chatGPT">
     <div class="container ">
         <div class="card card-header">
             <div class="card-header textAITitle col-12 col-6">
-                <h1>AI chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
+                <h1>Alex chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
                     model to deliver any AI-powered search, conversation, text completionand other advanced AI
                     features.</span>
             </div>
