--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="'CONTACT'"></app-header>
+<!-- <app-header [title]="'CONTACT'"></app-header> -->
 <div id="createProject">
     <div id="imgContactProject">
         <iframe width="100%" height="100%"
