--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <!-- HEEADER------------------------------------------------------------------------ -->
-<app-particle-animation></app-particle-animation>
+<!-- <app-particle-animation></app-particle-animation> -->
+<app-text-three></app-text-three>
 
 <div class="scrollDownHomeLeft">
     <span>
