--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -3,7 +3,7 @@
 
 </div>
 <div #containerSubTitleProjectWord class="containerSubTitleProjectWord">
-    <span class="subTitleProjectWord">Hi there! I'm Alejandro Alonzo, I'm a <a [routerLink]="['/projects']"
+    <span class="subTitleProjectWord">Hi there! I'm Alejandro Alonzo, <a [routerLink]="['/projects']"
             fragment="projectsTitle"><span class="linkBGdark">web developer. // Let me show you <fa-icon
                     [icon]="faArrowRight"></fa-icon></span></a></span>
 </div>
