--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="'PROJECTS'"></app-header>
+<!-- <app-header [title]="'PROJECTS'"></app-header> -->
 <div class="portfolioPage">
     <div class="containerTitle">
         <h2 id="projectsTitle">
