--- a/src/app/components/text-three/text-three.component.html
+++ b/src/app/components/text-three/text-three.component.html
@@ -1,5 +1,38 @@
-<div #magicContainer id="magicContainer"></div>
-<div class="textThreeWrapper">
-    <canvas #renderCanvas class="renderCanvas">
-    </canvas>
+<div class="containerThree">
+  <script type="x-shader/x-vertex" id="vertexshader">
+
+    attribute float size;
+    attribute vec3 customColor;
+    varying vec3 vColor;
+  
+    void main() {
+  
+      vColor = customColor;
+      vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+      gl_PointSize = size * ( 300.0 / -mvPosition.z );
+      gl_Position = projectionMatrix * mvPosition;
+  
+    }
+  
+</script>
+  <script type="x-shader/x-fragment" id="fragmentshader">
+
+   uniform vec3 color;
+   uniform sampler2D pointTexture;
+  
+   varying vec3 vColor;
+  
+   void main() {
+  
+     gl_FragColor = vec4( color * vColor, 1.0 );
+     gl_FragColor = gl_FragColor * texture2D( pointTexture, gl_PointCoord );
+  
+   }
+  </script>
+
+  <div #magic id="magic"></div>
+  <div #playground class="playground">
+    <div #bottomPosition class="bottomPosition">
+    </div>
+  </div>
 </div>
