--- a/src/app/components/text-three/text-three.component.scss
+++ b/src/app/components/text-three/text-three.component.scss
@@ -1,13 +1,15 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-// html, body { 
+.containerThree { 
   
-//   margin: 0;
-//   height: 100%;
-//   overflow: hidden;
-//   font-family: 'Roboto' !important; 
-//   color: white;
-//   font-size: 9px;
-// }
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  font-family: 'Roboto' !important; 
+  color: white;
+  font-size: 9px;
+}
 
 #magic {
 
@@ -20,7 +22,7 @@
   z-index: -9999;
 }
 
-.textThreeWrapper{
+.playground{
 
   position: fixed;
   width: 100%;
