--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -12,6 +12,7 @@
 </span>
 
 <header #headerE1 class="containerMegavideoText">
+    <div #mask class="mask"></div>
     <video #videoEl preload autoplay loop muted playsinline>
         <!-- <source src="" /> -->
         <source src="../../../assets/media/MyWork.mp4" />
