--- a/src/app/components/mega-text-video/mega-text-video.component.scss
+++ b/src/app/components/mega-text-video/mega-text-video.component.scss
@@ -22,6 +22,15 @@ header {
 header video { 
   width: 120vw!important; 
   object-fit: cover;
+
+}
+.mask {/* mask  white to the beggining */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8); 
 }
 
 
@@ -67,7 +76,7 @@ svg > text {
 .containerSubTitleProjectWord{
   display: flex;
   width: 100%;
-  background-color: #35373e;
+  background-color: #2d2f35;
 }
 .subTitleProjectWord{
   font-family: "MavenPro-Regular";
