--- a/src/app/components/text-three/text-three.component.scss
+++ b/src/app/components/text-three/text-three.component.scss
@@ -1,7 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-.containerThree { 
-  
+.containerThree {
   margin: 0;
   height: 100vh;
   width: 100%;
@@ -10,6 +9,7 @@
   color: white;
   font-size: 9px;
 }
+
 
 #magic {
 
@@ -22,31 +22,32 @@
   z-index: -9999;
 }
 
-.playground{
 
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  display: block;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+// .playground{
 
-}
-.bottomPosition{
+//   position: fixed;
+//   width: 100%;
+//   height: 100vh;
+//   display: block;
+//   top: 0;
+//   left: 0;
+//   display: flex;
+//   flex-wrap: nowrap;
+//   flex-direction: column;
+//   justify-content: flex-end;
+//   align-items: center;
 
-  text-align: center;
-  margin-bottom: 50px;
+// }
+// .bottomPosition{
+
+//   text-align: center;
+//   margin-bottom: 50px;
   
-}
-.minText{
+// }
+// .minText{
   
-  font-size: 14px;
-}
+//   font-size: 14px;
+// }
 
 // a {
 //   color: white;
