--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,17 +2,20 @@
 <!-- <app-particle-animation></app-particle-animation> -->
 <app-text-three></app-text-three>
 
-<div class="scrollDownHomeLeft">
+<!-- <div class="scrollDownHomeLeft">
     <span>
         Scroll down
     </span>
     <fa-icon [icon]="faArrowDown"></fa-icon>
-</div>
-<div class="scrollDownHomeRight">
+</div> -->
+<!-- <div class="scrollDownHomeRight">
     <span>
         Scroll down
     </span>
     <fa-icon [icon]="faArrowDown"></fa-icon>
+</div> -->
+<div #fieldScrollAnimation class="fieldScrollAnimation">
+    <div class="mouseScroll"></div>
 </div>
 
 <app-mega-text-video></app-mega-text-video>
@@ -30,14 +33,13 @@
                 Who's this guy
             </h3>
             <span class="descriptionAbout">
-                I’m a Web Developer located in Los Ángeles CA. in the US<br> My concept is never stop to learn that's
+                I’m a Web Developer based between Barcelona (Spain) and Los Ángeles CA (USA).<br> My concept is
+                never
+                stop to learn that's
                 why I've got
                 a
                 personal interest for continuous learning and
                 self improvement.<br>
-                I love to play the guitar in my free time, play videogames and I also really like to travel around the
-                world and connect
-                with many positive people.
             </span>
         </div>
 
@@ -239,9 +241,10 @@
         </div>
     </div>
     <div class="containerForm paddingRight200">
-        <h3 class="titles">My background</h3>
+        <h3 class="titles">Background</h3>
         <span class="descriptionAbout">
-            I enjoy creating things that live on the internet. My interest in web development started back a long time
+            I enjoy creating things that live on the internet. My interest in web development started back a long
+            time
             ago when
             I was completing my professional career in graphic design.
         </span>
@@ -249,7 +252,8 @@
 
             I'm lucky to have worked with amazing people in Europe
             for important and ambitious global companies where I learned a lot.
-            My main focus these days is building accessible, inclusive products and digital experiences for a variety of
+            My main focus these days is building accessible, inclusive products and digital experiences for a
+            variety of
             clients.
         </span>
         <span class="descriptionAbout marginTop50">
