--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -4,12 +4,13 @@
 </div>
 <div #containerSubTitleProjectWord class="containerSubTitleProjectWord">
     <span class="subTitleProjectWord">Hi there! I'm Alejandro Alonzo, <a [routerLink]="['/projects']"
-            fragment="projectsTitle"><span class="linkBGdark">web developer. // Let me show you <fa-icon
+            fragment="projectsTitle"><span class="linkBGdark">+3 years coding. // Let me show you <fa-icon
                     [icon]="faArrowRight"></fa-icon></span></a></span>
 </div>
 <span #playVideoButon class="playVideoButon">
     <fa-icon [icon]="faPlayCircle "></fa-icon>
 </span>
+
 
 <header #headerE1 class="containerMegavideoText">
     <div #mask class="mask"></div>
