--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,14 +35,14 @@
 <!-- navbar------------------------------------------------------------------------ -->
 <nav #navbar>
   <ul id="homeBtnMenu">
-    <li><a [routerLink]="['']" [routerLinkActive]="['actived']">ALEX</a></li>
+    <li><a [routerLink]="['']" [routerLinkActive]="['actived']">alex</a></li>
   </ul>
   <ul id="btnsMenu">
-    <li><a [routerLink]="['/projects']" fragment="projectsTitle" [routerLinkActive]="['actived']">PROJECTS</a></li>
+    <li><a [routerLink]="['/projects']" fragment="projectsTitle" [routerLinkActive]="['actived']">Projects</a></li>
     <!-- <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">CREATE</a></li> -->
-    <li><a [routerLink]="['/contact']" fragment="createProject" [routerLinkActive]="['actived']">CONTACT</a></li>
+    <li><a [routerLink]="['/contact']" fragment="createProject" [routerLinkActive]="['actived']">Contact</a></li>
     <!-- <li><a href="/assets/media/ManuelAlejandroCV.pdf" [routerLinkActive]="['actived']" target="blank">RESUME</a></li> -->
-    <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">CHATBOT</a></li>
+    <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">alex Chatbot</a></li>
   </ul>
   <div class="hide">
     <fa-icon [icon]="faBars"></fa-icon>
