three js mobile ok

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -4,7 +4,7 @@
     <div class="container ">
         <div class="card card-header">
             <div class="card-header textAITitle col-12 col-6">
-                <h1>Alex chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
+                <h1>alex Chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
                     model to deliver any AI-powered search, conversation, text completionand other advanced AI
                     features.</span>
             </div>
