--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
     <!-- <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">CREATE</a></li> -->
     <li><a [routerLink]="['/contact']" fragment="createProject" [routerLinkActive]="['actived']">Contact</a></li>
     <!-- <li><a href="/assets/media/ManuelAlejandroCV.pdf" [routerLinkActive]="['actived']" target="blank">RESUME</a></li> -->
-    <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">alex Chatbot</a></li>
+    <!-- <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">alex Chatbot</a></li> -->
   </ul>
   <div class="hide">
     <fa-icon [icon]="faBars"></fa-icon>
