Working in the slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,9 @@
     <li><a [routerLink]="['']" [routerLinkActive]="['actived']">alex</a></li>
   </ul>
   <ul id="btnsMenu">
-    <li><a [routerLink]="['/projects']" fragment="projectsTitle" [routerLinkActive]="['actived']">Projects</a></li>
+    <li><a [routerLink]="['/projects']" [routerLinkActive]="['actived']">Projects</a></li>
     <!-- <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">CREATE</a></li> -->
-    <li><a [routerLink]="['/contact']" fragment="createProject" [routerLinkActive]="['actived']">Contact</a></li>
+    <li><a [routerLink]="['/contact']" [routerLinkActive]="['actived']">Contact</a></li>
     <!-- <li><a href="/assets/media/ManuelAlejandroCV.pdf" [routerLinkActive]="['actived']" target="blank">RESUME</a></li> -->
     <!-- <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">alex Chatbot</a></li> -->
   </ul>
