--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,5 @@
 <!-- <app-header [title]="'PROJECTS'"></app-header> -->
+<app-slider [items]="sliderData"></app-slider>
 <div class="portfolioPage">
     <div class="containerTitle">
         <h2 id="projectsTitle">
