--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -11,7 +11,6 @@
     <fa-icon [icon]="faPlayCircle "></fa-icon>
 </span>
 
-
 <header #headerE1 class="containerMegavideoText">
     <div #mask class="mask"></div>
     <video #videoEl preload autoplay loop muted playsinline>
@@ -29,3 +28,7 @@
         <rect x="0" y="0" width="100%" height="100%" />
     </svg>
 </header>
+<div #viewProjectsButonWORK class="viewProjectsButonWORK">
+    <span><a [routerLink]="['/projects']" class="viewProjectsButonWORKspan">PROJECTS </a></span>|<span
+        [routerLink]="['/']" fragment="aboutMe" class="viewProjectsButonWORKspan"> ABOUT</span>
+</div>
