--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,7 +93,6 @@ canvas{
   height: 100vh;
 }
 .canvasBackground {
-  background-image: url('../src/assets/media/IAM.png');
   background-size: cover;
   margin-left: 1%;
 }
@@ -998,6 +997,7 @@ form input[type="submit"]:hover {
 
 
 /******************************************DETAIL***************************************/
+/*
 .imgeLeftMedium {
   width: 40%;
   margin-right: 50px;
@@ -1043,7 +1043,7 @@ form input[type="submit"]:hover {
   color: $TextColorGlobalSecundary;
 
   margin-left: 15px;
-}
+}*/
 
 
 
