Working in the slider

--- a/src/app/components/mega-text-video/mega-text-video.component.scss
+++ b/src/app/components/mega-text-video/mega-text-video.component.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: IMPACT;
-  src:url("../../../fonts/IMPACT.TTF");
+  src:url("../../../fonts/IMPACT.ttf");
 }
 
 @font-face {
