--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1271,6 +1271,7 @@ form input[type="submit"]:hover {
   .containerTitle span {
     width: 100%;
     margin-bottom: 50px;
+    text-align: justify;
   }
   .projectView {
     width: 100%;
