--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 <!-- navbar------------------------------------------------------------------------ -->
 <nav #navbar>
   <ul id="homeBtnMenu">
-    <li><a [routerLink]="['']" [routerLinkActive]="['actived']">alex</a></li>
+    <li><a [routerLink]="['']" [routerLinkActive]="['']">alex</a></li>
   </ul>
   <ul id="btnsMenu">
     <li><a [routerLink]="['/projects']" [routerLinkActive]="['actived']">Projects</a></li>
