working on projects

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,8 @@
 <!-- <div class="alexUpsideDown"><img class="imgAlexUpsideDown" src="../../../assets/media/alejxUpSideDown.png" alt=""></div> -->
 <div class="alexMbile">alex</div>
 <div>
-    <a #webDeveloper class="webDeveloper" href="/assets/media/ManuelAlejandroCV.pdf" target="blank">Web Developer</a>
+    <a #webDeveloper class="webDeveloper" href="/assets/media/Resume-AlejandroAlonzo.pdf" target="blank">Web
+        Developer</a>
 </div>
 
 <div #fieldScrollAnimation class="fieldScrollAnimation">
