fix PROJECTS in mobile version

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -34,7 +34,7 @@
 </div>
 <div class="bottonsFooterDetalsProject">
     <div class="bottonsFooterDetalsProjectLeft">
-        <a [routerLink]="['/projects']" fragment="portfolioPage">
+        <a [routerLink]="['/more-projects']" fragment="portfolioPage">
             <div class="bottonsFooterDetalsProjectTextAndIcon">
                 <fa-icon [icon]="faArrowLeft" class="socialIcons"></fa-icon>&nbsp; &nbsp;
             </div>
